src/app/components/forecast/forecast.component.css
.container {
  max-width: none;
  width: 75%;
  /* background-color: red; */
  padding: 0;
  margin-top: 2em;
}

.cards {
  display: flex;
  flex-flow: row nowrap;
}
.tittle{
  position: absolute;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: left;
  width: 100%;
}

@media (max-width: 768px) {
  .container {
    width: 100%;
  }
  .cards {
    flex-flow: row wrap;
  }
}

@media (max-width: 1024px) {
  .container {
    width: 100%;
  }
}

